--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ build/
 .vscode/
 Platform/Windows/helloengine_win.exe
 Platform/Linux/helloengine_xcb
+Platform/Windows/helloengine_d2d.exe
+Platform/Windows/helloengine_d2d.obj
